--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional purpose"/>
+    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional/pooja purpose"/>
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
     <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
@@ -28,54 +28,58 @@
   </head>
   <body>
     <!-- Banner -->
-      <div id="banner-content" class="banner" align="center">
-        <b></b>Ittar | Non alcoholic perfumes</b> crafted for devotional purpose
-      </div>
+      <!-- <div id="banner-content" class="banner" align="center">
+        <b></b>Ittar & Non alcoholic perfumes</b> crafted for devotional/pooja purpose
+      </div> -->
     <!-- Start Top Bar -->
-    <div class="top-bar" id="responsive-menu">
+    <div class="top-bar" id="responsive-menu" style="background-color: #e3f2fd;">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <li id="focused"><a href="./home.html">Home</a></li>
-            <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
+            <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop</a></li>
             <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
             <li id="nav_element"><a href="./about_us.html">About</a></li>
+            <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
           </ul>
         </div>
     </div>
+
+
+
     <!-- End Top Bar -->
     <br>
     <br>
     <div class="row" align="center">
       <div class="jumbotron bg-garnet">
         <div class="blockquote-quotes">
-          <h3 class="text-center"><strong><div class="animate-text" id="headText">Natural & Skin friendly</div></strong></h3>
-          <!-- <img src="./images/logo.png" width="10%"></img> -->
-           <hr/>
-          <img src="./images/website_header.jpg" width="80%"/>
+          <!-- <h3 class="text-center"><strong><div class="animate-text" id="headText">Shree Ji Ittar</div></strong></h3>
+           <hr/> -->
+          <img src="./images/header.gif" width="70%"/>
           <hr/>
-            <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Check our products on</h4> <img src="./images/minis_logo.png" width="10%"></a>
+            <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
         </div>
       </div>
     </div>
     <br/>
     <div class="callout large secondary">
       <div class="row">
-        <div class="large-6 columns mycontent">
-          <h4><b>We specialize in crafting <u>devotional</u> fragrances..</b></h4>
-          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b> </div>
-          <div>- Use code <u>GRAB20</u> to get 20% off on all orders > <b>₹249</b></div>
-          <div>- Contact for bulk order</div>
-          
+        <div class="large-5 columns mycontent">
+          <h4><b>For devotional/pooja purpose </b></h4>
+          <hr/>
+          <div>✅   Free from Alcohol & harmful chemicals </div>
+          <div>✅   Soft & long lasting fragrance </div>
+          <div>✅   Home delivery available across India</div>
+          <div>✅   Extra discount on bulk orders </div>
         </div>
-        <div class="large-4 columns">
-          <ul>
-            </hr>
-<h4><b>Get in touch..</b></h4>
+        <div class="large-2 columns">
+          <br>
+        </div>
+        <div class="large-5 columns mycontent" >
+            <h4><b>Get in touch..</b></h4>
             <hr/>
-            <h6><a target="_blank" href="tel:+919407472537">+91-94074-72537</a></h6>
-            <h6><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">108 Jain mandir path, in front of bisa neema dharamshala khargone 451001</a></h6>
-          </ul>
-          &ndash; <a href="https://www.instagram.com/shree_ji_ittar">Shree Ji Ittar </a> </p>
+            <div><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">📍 108 Jain mandir path, khargone MP 451001</a></div>
+            <div><a target="_blank" href="tel:+919407472537">📱 +91 94074-72537</a></div>
+            <a href="https://www.instagram.com/shree_ji_ittar"><b>#️⃣ shree_ji_ittar </b></a> </p>
         </div>
       </div>
     </div>
