--- a/about_us.html
+++ b/about_us.html
@@ -33,14 +33,15 @@
   </head>
   <body>
     <!-- Banner -->
-      <div id="banner-content" class="banner" align="center">
+      <!-- <div id="banner-content" class="banner" align="center">
         <b>Ittar | Non alcoholic perfumes</b> crafted for devotional purpose
-      </div>
+      </div> -->
     <!-- Start Top Bar -->
     <div class="top-bar" id="responsive-menu">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <li id="nav_element"><a href="./home.html">Home</a></li>
+            <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop</a></li>
             <li id="nav_element"><a href="./reviews.html"">Reviews</a></li>
             <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
             <li id="focused"><a href="./about_us.html">About</a></li>
@@ -94,25 +95,24 @@
     <br/>
     <div class="callout large secondary">
       <div class="row">
-        <div class="large-6 columns mycontent">
-          <h4><b>We specialize in crafting <u>devotional</u> fragrances..</b></h4>
-          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b> </div>
-          <div>- Use code <u>GRAB20</u> to get 20% off on all orders > <b>₹249</b></div>
-          <div>- Contact for bulk order</div>
-          
-
+        <div class="large-5 columns mycontent">
+          <h4><b>For devotional/pooja purpose </b></h4>
+          <hr/>
+          <div>✅   Free from Alcohol & harmful chemicals </div>
+          <div>✅   Soft & long lasting fragrance </div>
+          <div>✅   Home delivery available across India</div>
+          <div>✅   Extra discount on bulk orders </div>
         </div>
-        <div class="large-4 columns">
-          <ul>
-            </hr>
+        <div class="large-2 columns">
+          <br>
+        </div>
+        <div class="large-5 columns mycontent" >
             <h4><b>Get in touch..</b></h4>
             <hr/>
-            <h6><a target="_blank" href="tel:+919407472537">+91-94074-72537</a></h6>
-            <h6><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">108 Jain mandir path, in front of bisa neema dharamshala khargone 451001</a></h6>
-          </ul>
-          &ndash; <a href="https://www.instagram.com/shree_ji_ittar">Shree Ji Ittar </a> </p>
+            <div><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">📍 108 Jain mandir path, khargone MP 451001</a></div>
+            <div><a target="_blank" href="tel:+919407472537">📱 +91 94074-72537</a></div>
+            <a href="https://www.instagram.com/shree_ji_ittar"><b>#️⃣ shree_ji_ittar </b></a> </p>
         </div>
-
       </div>
     </div>
     <div class="row column">
