--- a/about_us.html
+++ b/about_us.html
@@ -41,10 +41,9 @@
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <li id="nav_element"><a href="./home.html">Home</a></li>
-            <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop</a></li>
-            <li id="nav_element"><a href="./reviews.html"">Reviews</a></li>
-            <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
+            <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop ↗</a></li>
             <li id="focused"><a href="./about_us.html">About</a></li>
+            <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
           </ul>
         </div>
     </div>
@@ -83,12 +82,12 @@
     </div>
     </div>
 
-    <div class="row">
-      <div class="jumbotron bg-garnet">
-        <div class="blockquote-quotes">
-            <a target="_blank" href="https://shreejiittar.mini.store/" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
-        </div>
-      </div>
+    <div class="row bg-garnet" align="center">
+      <br/>
+      <br/>
+      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
+      <br/>
+      <br/>
     </div>
 
     <br/>
