--- a/home.html
+++ b/home.html
@@ -32,14 +32,14 @@
         <b></b>Ittar & Non alcoholic perfumes</b> crafted for devotional/pooja purpose
       </div> -->
     <!-- Start Top Bar -->
-    <div class="top-bar" id="responsive-menu" style="background-color: #e3f2fd;">
+    <div class="top-bar" id="responsive-menu">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
             <li id="focused"><a href="./home.html">Home</a></li>
-            <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop</a></li>
-            <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
+            <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop ↗</a></li>
             <li id="nav_element"><a href="./about_us.html">About</a></li>
-            <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
+            <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
+            <!-- <li id="nav_element"><a href="./reviews.html">Reviews</a></li> -->
           </ul>
         </div>
     </div>
@@ -84,8 +84,9 @@
       </div>
     </div>
     <div class="row column">
-      <hr>
+
       <ul class="menu">
+        <li>Shipping Policy</li>
         <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
