--- a/image_gallery.html
+++ b/image_gallery.html
@@ -36,10 +36,9 @@
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
           <li id="nav_element"><a href="./home.html">Home</a></li>
-          <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop</a></li>
-          <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
-          <li id="focused"><a href="./image_gallery.html">Images</a></li>
+          <li id="nav_element"><a href="https://shreejiittar.mini.store/">Shop ↗</a></li>
           <li id="nav_element"><a href="./about_us.html">About</a></li>
+          <li id="focused"><a href="./image_gallery.html">Images</a></li>
         </ul>
       </div>
     </div>
