add shipping policy and minor enhancements

--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="./js/product_page_js.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
   </head>
   <body>
     <!-- Banner -->
@@ -152,6 +152,7 @@
 
       <hr>
       <ul class="menu">
+        <li><a  id="link" href="./policy.html">Shipping Policy</a></li>
         <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
