--- a/image_gallery.html
+++ b/image_gallery.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="./js/product_page_js.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
   </head>
   <body>
     <!-- Banner -->
@@ -183,6 +183,7 @@
     <div class="row column">
       <hr>
       <ul class="menu">
+        <li><a  id="link" href="./policy.html">Shipping Policy</a></li>
         <li class="float-right">Copyright &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
