make it more SEO friendly

--- a/home.html
+++ b/home.html
@@ -13,7 +13,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional/pooja purpose"/>
+    <link rel="canonical" href="https://shreejiittar.in/home.html">
+    <link rel="apple-touch-icon" href="images/logo_white_bg.png">
+    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant Best for devotional/pooja purpose"/>
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
     <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
@@ -29,7 +31,7 @@
   <body>
     <!-- Banner -->
       <!-- <div id="banner-content" class="banner" align="center">
-        <b></b>Ittar & Non alcoholic perfumes</b> crafted for devotional/pooja purpose
+        <b></b>Ittar & Non alcoholic perfumes</b> crafted Best for devotional/pooja purpose
       </div> -->
     <!-- Start Top Bar -->
     <div class="top-bar" id="responsive-menu">
@@ -54,7 +56,9 @@
         <div class="blockquote-quotes">
           <!-- <h3 class="text-center"><strong><div class="animate-text" id="headText">Shree Ji Ittar</div></strong></h3>
            <hr/> -->
-          <img src="./images/header.gif" width="70%"/>
+          <h1 align="left">Home</h1>
+          <p>Fragrance for spiritual purpose</p>
+          <img src="./images/header.gif" width="70%" alt="Animated header image"/>
           <hr/>
             <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
         </div>
@@ -64,7 +68,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-5 columns mycontent">
-          <h4><b>For devotional/pooja purpose </b></h4>
+          <h4><b>Best for devotional/pooja purpose </b></h4>
           <hr/>
           <div>✅   Free from Alcohol & harmful chemicals </div>
           <div>✅   Soft & long lasting fragrance </div>
