--- a/image_gallery.html
+++ b/image_gallery.html
@@ -13,6 +13,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Image gallery - Shree Ji Ittar & Perfume</title>
+    <link rel="canonical" href="https://shreejiittar.in/image_gallery.html">
+    <link rel="apple-touch-icon" href="images/logo_white_bg.png">
     <meta name="description" content="Check recent images from 'Shree Ji Ittar & Perfume'"/>
     <meta name="og:title" content="Image gallery - Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Check recent images from 'Shree Ji Ittar & Perfume'"> 
@@ -43,109 +45,108 @@
       </div>
     </div>
     <!-- End Top Bar -->
-    <br>
-    <br>
+
     <div class="row">
       
-
+      <h1 align="left">Images</h1>
       <div class="featured-image-block-grid">
         <div class="featured-image-block-grid-header small-11 medium-9 large-8 columns text-left">
-          <h3>Make a switch to natural and non toxic fragrance</h3>
+          <p>Make a switch to natural and non toxic fragrance</p>
           <hr/>
         </div>
 
         <div class="row large-up-4 small-up-2">
           <div class="featured-image-block column">
-              <!-- <img src="https://unsplash.it/600/600?image=1075" /> -->
+              <!-- <img alt="Shree Ji Ittar Image" src="https://unsplash.it/600/600?image=1075" /> -->
               <!-- <p class="text-center featured-image-block-title">New York</p> -->
-              <img src="./images/gallery/1.jpg" />
+              <img alt="Shree Ji Ittar Image" src="./images/gallery/1.jpg" />
           </div>
 
           <div class="featured-image-block column">
-            <img src="./images/gallery/2.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/2.jpg" />
           </div>
 
           <div class="featured-image-block column">
            <a href="#">
-            <img src="./images/gallery/3.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/3.jpg" />
             </a>
           </div>
 
           <div class="featured-image-block column">
            <a href="#">
-            <img src="./images/gallery/4.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/4.jpg" />
             </a>
           </div>
 
           <div class="featured-image-block column">
            <a href="#">
-            <img src="./images/gallery/5.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/5.jpg" />
             </a>
           </div>
 
           <div class="featured-image-block column">
            <a href="#">
-            <img src="./images/gallery/6.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/6.jpg" />
             </a>
           </div>
 
           <div class="featured-image-block column">
            <a href="#">
-            <img src="./images/gallery/7.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/7.jpg" />
             </a>
           </div>
 
           <div class="featured-image-block column">
            <a href="#">
-            <img src="./images/gallery/8.jpg" />
+            <img alt="Shree Ji Ittar Image" src="./images/gallery/8.jpg" />
             </a>
           </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/9.jpg" />
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/9.jpg" />
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/10.jpg" />
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/10.jpg" />
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/11.jpg" />
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/11.jpg" />
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/12.jpg"/>
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/12.jpg"/>
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/13.jpg"/>
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/13.jpg"/>
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/14.jpg" />
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/14.jpg" />
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/15.jpg"/>
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/15.jpg"/>
              </a>
            </div>
 
            <div class="featured-image-block column">
             <a href="#">
-             <img src="./images/gallery/16.jpg"/>
+             <img alt="Shree Ji Ittar Image" src="./images/gallery/16.jpg"/>
              </a>
            </div>
         </div>
@@ -161,7 +162,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-5 columns mycontent">
-          <h4><b>For devotional/pooja purpose </b></h4>
+          <h4><b>Best for devotional/pooja purpose </b></h4>
           <hr/>
           <div>✅   Free from Alcohol & harmful chemicals </div>
           <div>✅   Soft & long lasting fragrance </div>
