--- a/policy.html
+++ b/policy.html
@@ -13,6 +13,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Policies - Shree Ji Ittar & Perfume</title>
+    <link rel="canonical" href="https://shreejiittar.in/policy.html">
+    <link rel="apple-touch-icon" href="images/logo_white_bg.png">
     <meta name="description" content="Know more about policies of 'Shree Ji Ittar & Perfume'"/>
     <meta name="og:title" content="Policies - Shree Ji Ittar & Perfume">
     <meta name="og:description" content="Know more about policies of 'Shree Ji Ittar & Perfume'">
@@ -51,6 +53,8 @@
     <br>
     <br>
     <div class="row"> 
+      <h1 align="left">Policy</h1>
+      <p>Policies for online store</p>
       <div id="about_us">
         <h3 align="center" id="box_heading"># Shipping policy</h3>
         <hr>
@@ -88,7 +92,7 @@
     <div class="row bg-garnet" align="center">
       <br/>
       <br/>
-      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
+      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" alt="swiggy minis logo" src="./images/minis_logo.png" width="10%"></a>
       <br/>
       <br/>
     </div>
@@ -98,7 +102,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-5 columns mycontent">
-          <h4><b>For devotional/pooja purpose </b></h4>
+          <h4><b>Best for devotional/pooja purpose </b></h4>
           <hr/>
           <div>✅   Free from Alcohol & harmful chemicals </div>
           <div>✅   Soft & long lasting fragrance </div>
