--- a/reviews.html
+++ b/reviews.html
@@ -13,6 +13,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reviews - Shree Ji Ittar & Perfume</title>
+    <link id="head_link" rel="canonical" href="https://shreejiittar.in/reviews.html">
     <meta name="description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"/>
     <meta name="og:title" content="Reviews - Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"> 
@@ -47,18 +48,20 @@
     <br>
     <br>
     <div class="row">
+      <h1 align="left">Reviews</h1>
+      <p>Reviews below are getting fetched from our <a href="https://maps.app.goo.gl/AJCeJaiEi1gjYnhZ8">"<u>Google business profile</u>"</a></p>
       <div class='sk-ww-google-reviews' data-embed-id='25407608'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
     </div>
     <br/>
     <div class="row bg-garnet" align="center">
-      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
+      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" alt="swiggy minis logo" src="./images/minis_logo.png" width="10%"></a>
       <br/>
       <br/>
     </div>
     <div class="callout large secondary">
       <div class="row">
         <div class="large-5 columns mycontent">
-          <h4><b>For devotional/pooja purpose </b></h4>
+          <h4><b>Best for devotional/pooja purpose </b></h4>
           <hr/>
           <div>✅   Free from Alcohol & harmful chemicals </div>
           <div>✅   Soft & long lasting fragrance </div>
