--- a/about_us.html
+++ b/about_us.html
@@ -13,6 +13,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>About us - Shree Ji Ittar & Perfume</title>
+    <link rel="canonical" href="https://shreejiittar.in/about_us.html">
+    <link rel="apple-touch-icon" href="images/logo_white_bg.png">
     <meta name="description" content="Know more about 'Shree Ji Ittar & Perfume'"/>
     <meta name="og:title" content="About us - Shree Ji Ittar & Perfume">
     <meta name="og:description" content="Know more about 'Shree Ji Ittar & Perfume'">
@@ -23,9 +25,6 @@
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="./js/about_us.js"></script>
-    
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Special+Elite&display=swap" rel="stylesheet">
@@ -48,9 +47,8 @@
         </div>
     </div>
     <!-- End Top Bar -->
-    <br>
-    <br>
-    <div class="row"> 
+    <h1 align="left">About</h1>
+    <div class="row">
       <div id="about_us">
         <div>
           <h2 align="center" id="box_heading">What Inspire Us</h2>
@@ -85,7 +83,7 @@
     <div class="row bg-garnet" align="center">
       <br/>
       <br/>
-      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
+      <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" alt="Swiggy minis logo" src="./images/minis_logo.png" width="10%"></a>
       <br/>
       <br/>
     </div>
@@ -95,7 +93,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-5 columns mycontent">
-          <h4><b>For devotional/pooja purpose </b></h4>
+          <h4><b>Best for devotional/pooja purpose </b></h4>
           <hr/>
           <div>✅   Free from Alcohol & harmful chemicals </div>
           <div>✅   Soft & long lasting fragrance </div>
@@ -126,18 +124,7 @@
       </ul>
     </div>
 
-
-
-    <!-- <div class="reveal" id="animatedModal10" data-reveal data-close-on-click="true" data-animation-in="spin-in" data-animation-out="spin-out">
-      <h1>Whoa, I'm dizzy!</h1>
-      <p class="lead">There are many options for animating modals, check out the Motion UI library to see them all</p>
-      <button class="close-button" data-close aria-label="Close reveal" type="button">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div> -->
-
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <!-- <script src="./js/product_name_id_map.js"></script> -->
   </body>
 </html>
