add google tag manager for home page

--- a/image_gallery.html
+++ b/image_gallery.html
@@ -177,7 +177,7 @@
             <hr/>
             <div><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">📍 108 Jain mandir path, khargone MP 451001</a></div>
             <div><a target="_blank" href="tel:+919407472537">📱 +91 94074-72537</a></div>
-            <a href="https://www.instagram.com/shree_ji_ittar"><b>#️⃣ shree_ji_ittar </b></a> </p>
+            <a href="https://www.instagram.com/shree_ji_ittar">#️⃣ instagram.com/<b>shree_ji_ittar </b></a> </p>
         </div>
       </div>
     </div>
