--- a/home.html
+++ b/home.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C9CM4LE8GJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-C9CM4LE8GJ');
-    </script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WQKZ9HZV');</script>
+  <!-- End Google Tag Manager -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ji Ittar & Perfume</title>
@@ -29,6 +29,11 @@
     
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQKZ9HZV"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
     <!-- Banner -->
       <!-- <div id="banner-content" class="banner" align="center">
         <b></b>Ittar & Non alcoholic perfumes</b> crafted Best for devotional/pooja purpose
@@ -83,7 +88,7 @@
             <hr/>
             <div><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">📍 108 Jain mandir path, khargone MP 451001</a></div>
             <div><a target="_blank" href="tel:+919407472537">📱 +91 94074-72537</a></div>
-            <a href="https://www.instagram.com/shree_ji_ittar"><b>#️⃣ shree_ji_ittar </b></a> </p>
+            <a href="https://www.instagram.com/shree_ji_ittar">#️⃣ instagram.com/<b>shree_ji_ittar </b></a> </p>
         </div>
       </div>
     </div>
