--- a/home.html
+++ b/home.html
@@ -10,16 +10,23 @@
   })(window,document,'script','dataLayer','GTM-WQKZ9HZV');</script>
   <!-- End Google Tag Manager -->
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shree Ji Ittar & Perfume</title>
+
+
     <link rel="canonical" href="https://shreejiittar.in/home.html">
     <link rel="apple-touch-icon" href="images/logo_white_bg.png">
-    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant Best for devotional/pooja purpose"/>
+
+    <meta name="title" content="Devotional fragrance | Shree Ji Ittar">
+    <meta name="description" content="Fragrance ideal for devotional purpose, our ittars are not just soft in aroma but also long lasting, alcohol free & free from harmful chemicals">
+    <meta name="keywords" content="devotional attar, pooja ittar, ittar, itra, ittar online, natural attar, best attar, buy attar online, attar for puja, attar for meditation, attar for spiritual use, premium attar, natural attar online, organic attar, handmade attar, rose attar, kaveda attar, champa attar, mogra attar, jasmine attar, sandalwood rollon, chandan attar, mitti attar, kesar chandan, champa chameli, kesar gulab, kaweda ittar, saffron fragrance, natural lavender oil, non alcoholic perfume, vetiver rollon, khus attar, dalchini attar, laung attar, lotus perfume, kamal ka itra, petrichor fragrance, attar rollon, indian ittar, best attar for puja, best attar for meditation, shree ji attar, diwali attar, navratri attar, holi attar, natural gift, where to buy devotional attar online, best attar for home puja, natural attar for spiritual healing, how to use ittar for puja, benefits of using devotional attar, buy authentic ittar online india, premium attar for special occasions, handmade attar for religious ceremonies, devotional attar in madhya pradesh, buy attar online in madhya pradesh, devotional attar in india, buy attar online in india, non alcoholic attar, harmful chemical free attar, laong lasting natural fragrance, devotional fragrance, attar for calming mind during puja, long-lasting attar for daily prayers, natural attar for uplifting mood, attar to create a peaceful atmosphere for meditation, buy attar to enhance concentration during yoga, attar to promote feelings of devotion, natural attar for spiritual awakening, premium attar for gift on religious occasions, attar for meditation and chanting, premium attar for gifting on hindu festivals, rose attar for puja, sandalwood attar for meditation, jasmine attar for spiritual cleansing, mogra attar for temple offerings, buy traditional indian attar online, where to find handmade attar for puja, original floral attar online, explore a variety of devotional attars, best place to buy pooja attar in india, shreejiittar.in devotional attars, purchase shreejiittar.in premium attar, authentic attar collection at shreejiittar.in, long-lasting natural attar for puja, pure and authentic attar for meditation, high-quality attar for spiritual awakening, best price on genuine attar online, long-lasting attar without alcohol, natural attar without side effects, safe attar for daily use, affordable attar for all budgets, attar for sensitive skin, cruelty-free and vegan attar, uplifting attar for spiritual upliftment, soothing attar for relaxation and meditation, calming attar for peace of mind, enchanting attar for a divine experience, blissful attar for spiritual journey, elevating attar for a sense of tranquility, pure attar for puja, genuine attar for spiritual use, authentic indian attar online, high-quality attar for devotional purposes, best quality attar for meditation, original attar for religious ceremonies">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Lalita Mahajan">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
-    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
-    <meta name="author" content="Lalita Mahajan">
     <script src="./js/product_name_id_map.js"></script>
     <script src="./js/page_navigation.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
