--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
            <hr/> -->
           <h1 align="left">Home</h1>
           <p>Fragrance for spiritual purpose</p>
-          <img src="./images/header.gif" width="70%" alt="Animated header image"/>
+          <img src="./images/banner.png" width="65%" alt="Animated header image"/>
           <hr/>
             <a target="_blank" href="https://shreejiittar.mini.store/" class="large expanded"><h4>Shop now @</h4> <img class="blink_me" src="./images/minis_logo.png" width="10%"></a>
         </div>
