update footer and descriptions

--- a/policy.html
+++ b/policy.html
@@ -109,10 +109,10 @@
         <div class="large-5 columns mycontent">
           <h4><b>Best for devotional/pooja purpose </b></h4>
           <hr/>
-          <div>✅   Free from Alcohol & harmful chemicals </div>
-          <div>✅   Soft & long lasting fragrance </div>
-          <div>✅   Home delivery available across India</div>
-          <div>✅   Extra discount on bulk orders </div>
+          <div>✅   Alcohol free </div>
+          <div>✅   Soft & long lasting </div>
+          <div>✅   Home delivery</div>
+          <div>✅   Bulk order discounts </div>
         </div>
         <div class="large-2 columns">
           <br>
