add _black as target on product page buy btn

--- a/product.html
+++ b/product.html
@@ -87,7 +87,7 @@
           <th>Price per bottel</th>
         </table>
         <br>
-        <a id="buy_button" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
+        <a id="buy_button" target="_blank" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
         <br/>
         <!-- AddToAny BEGIN -->
           <div id="shareBtn" class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Shree Ji Ittar &amp; Perfume">
