--- a/product.html
+++ b/product.html
@@ -154,7 +154,7 @@
     <script>
       $(document).foundation();
       productUrlMap.forEach(function(item){
-       if (window.location.href.endsWith(item.name)){
+       if (window.location.href.split('&')[0].endsWith(item.name)){
         document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
         }
        })
