add swipe option

--- a/policy.html
+++ b/policy.html
@@ -59,7 +59,7 @@
     <br>
     <div class="row"> 
       <h1 align="left">Policy</h1>
-      <p>Policies for online store</p>
+      <p>Policies for our online store</p>
       <div id="about_us">
         <h3 align="center" id="box_heading"># Shipping policy</h3>
         <hr>
