--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
     <script src="./js/product_name_id_map.js"></script>
-    <script src="./js/page_navigation.js"></script>
+    <!-- <script src="./js/page_navigation.js"></script> -->
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
