--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
     <script src="./js/product_name_id_map.js"></script>
-    <!-- <script src="./js/page_navigation.js"></script> -->
+    <script src="./js/page_navigation.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
@@ -115,12 +115,12 @@
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script src="./js/index_page.js"></script>
     <script>
-      $(document).foundation();
-      productUrlMap.forEach(function(item){
-       if (window.location.href.endsWith(item.name)){
-        document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
-        }
-       })
+      // $(document).foundation();
+      // productUrlMap.forEach(function(item){
+      //  if (window.location.href.endsWith(item.name)){
+      //   document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
+      //   }
+      //  })
     </script>
   </body>
 </html>
